# sentinel-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: audit.rs  cloud.rs  format.rs  keygen.rs  main.rs
