[package]
name = "sentinel-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Sentinels-Today/sentinel-cli"
homepage = "https://sentinels.today"
authors = ["Sentinel Labs <admin@sentinels.today>"]
description = "Operator CLI for Sentinel Labs fleet management."
rust-version = "1.75"
readme = "README.md"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
